# Self-Driving-Vehicle-With-Carla

./: Agent.py  README.md  main.py  requirements.txt
RL_local_planner/: Dataset.py  README.md  buffer.py  config.py  env.py  imports.py  local_planner.py  main.py  main_a2c.py  main_gail.py  main_ppo.py  main_sac.py  model.py  off_policy-continious.py  paths.py  sac_only_steer.py  test.py  train.py
RL_local_planner/experimented/: discrete_ppo.py  gail_imitation.py  ppo_mapper.py  steer.py
RL_local_planner/not_used/: discrete_shared_ac_net.py  off_policy.py
RL_local_planner/static_map/: discrete_mapper.py
RL_local_planner/static_mapper/: Road_Generation.py  a2c_static.py
RL_local_planner/static_mapper/experimented/: continuous_mapper.py
RL_local_planner/utils/: ActorManager.py  CarlaSyncMode.py  Config.py  Dataset.py  mapGenerator.py
behavior_planner/: behaviour_planner.py
data_collection_scripts/: collect_points.py  collect_trajectory.py  data_collect.py
data_collection_scripts/perception/localization/: collect_trajectory.py
data_collection_scripts/perception/mapping/: collect_points.py
local_planner/: Road_Generation.py  continuous_mapper.py
localization/include/: common.h  filter.h  frame.h  measurement.h  observation.h  state.h
mission_planner/: README.md  custom_graph_parser.py  mission_planner.py
perception/: README.md  perception.py
perception/feature_extraction_and_mapping/: extract_keypoints.sh
perception/localization/: CMakeLists.txt  data_loader.h  main.cpp  testing.cpp
perception/mapping/: CMakeLists.txt  create_map.cpp
